Time: 4 ms (91.26%), Space: 55 MB (44.75%) - LeetHub